samples/_failures_safe/1761434254_c3ec2a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f5f51b35.c: In function ‘main’:
./samples/SAFE/__tmp_f5f51b35.c:149:5: error: expected expression at end of input
  149 |     size_t compressed_len =
      |     ^~~~~~
./samples/SAFE/__tmp_f5f51b35.c:149:5: error: expected declaration or statement at end of input
